<resources>
    <string name="app_name">Worknet</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="phone">Phone number</string>
    <string name="click_to_login">Click to login</string>
    <string name="fill_with_password">Password</string>
    <string name="fill_with_email">Email</string>
    <string name="fill_with_phone">Phone</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="home">Home</string>
    <string name="network">Network</string>
    <string name="post">Post</string>
    <string name="job_postings">Job Postings</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="authentication_fail_msg">Authentication failed! Please try again!</string>
    <string name="repeat_pass_validation_error">The passwords are not the same!</string>
    <string name="profile_image">Profile Image</string>
    <string name="messages">Messages</string>
    <string name="search">Search...</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec venenatis mollis tincidunt. Nunc tortor ligula, malesuada non imperdiet a, rhoncus sit amet turpis. Aliquam auctor magna eu metus maximus, semper egestas dui vestibulum. In hac habitasse platea dictumst. Curabitur pulvinar sagittis mauris, sed facilisis ex suscipit sit amet.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="like">Like</string>
    <string name="comments">Comments</string>
    <string name="like_counter_placeholder_value">100</string>
    <string name="leave_your_comment">Leave your comment...</string>
    <string name="pick_profile_image">Pick Profile Image</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="add_education">Add Education</string>
    <string name="lorem">Lorem</string>
    <string name="is_private_label">This information is set to private.</string>
    <string name="is_public_label">This information is set to public.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="work_experience">Work Experience</string>
    <string name="add_skill">Add Skill</string>
    <string name="add_work_experience">Add Work Experience</string>
    <string name="school">School</string>
    <string name="degree">Degree</string>
    <string name="field_of_study">Field of Study</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="grade">Grade</string>
    <string name="description">Description</string>
    <string name="is_public_information">Is public information</string>
    <string name="add_education_title">Add a new Education entry</string>
    <string name="edit_education_title">Edit your Education entry</string>
    <string name="add_work_experience_title">Add your Work Experience</string>
    <string name="edit_work_experience_title">Edit your Work Experience</string>
    <string name="title">Title</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="current_position">Current Position</string>
    <string name="employment_type">Employment Type</string>
    <string name="add_skill_title">Add a new skill</string>
    <string name="edit_skill_title">Edit your skill</string>
    <string name="your_skill">Your Skill</string>
    <string name="logout">Logout</string>
    <string name="make_a_new_post">Make a new post</string>
    <string name="add_image">+ Image</string>
    <string name="add_video">+ Video</string>
    <string name="add_audio">+ Audio</string>
    <string name="add_post">+ Post</string>
    <string name="create_job_posting">Create Job Posting</string>
    <string name="edit_job_posting">Edit Job Posting</string>
    <string name="apply">Apply</string>
    <string name="create_a_new_job_posting">Create a new Job Posting</string>
    <string name="job_skills">Job skills</string>
    <string name="view_applicants">View applicants</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="workplace_type">Workplace Type</string>
    <string name="learn_more">Learn More</string>
    <string name="returnLabel">Return</string>
    <string name="play_sound_file">Play sound file</string>
    <string name="see_more">See More...</string>
    <string name="no_results">No results.</string>
    <string name="connect">Connect</string>
    <string name="send_message">Send Message</string>
</resources>