<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/silver"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">
        <TextView
            android:id="@+id/skill_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_short"/>
        <TextView
            android:id="@+id/privacy_label"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_private_label"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/edit_skill_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"/>
            <Button
                android:id="@+id/delete_skill_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>