<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

  <Button
      android:id="@+id/buttonRegister"
      android:layout_width="187dp"
      android:layout_height="48dp"
      android:layout_marginTop="32dp"
      android:text="@string/register"
      android:textStyle="bold"
      app:cornerRadius="0dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/e_mail"
      app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <EditText
      android:id="@+id/editTextTextEmailAddress"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:autofillHints="mail@example.com"
      android:ems="10"
      android:hint="@string/fill_with_email"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      tools:ignore="LabelFor" />

  <EditText
      android:id="@+id/editTextTextPassword"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:ems="10"
      android:hint="@string/fill_with_password"
      android:importantForAutofill="no"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView2"
      tools:ignore="LabelFor" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/password"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:gravity="start|center_vertical"
      android:text="@string/app_name"
      android:textSize="48sp"
      android:textStyle="bold|italic"
      app:drawableLeftCompat="@drawable/worknet_logo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/register"
      android:textAlignment="center"
      android:textSize="34sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/repeat_password"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPasswordRepeat"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

  <EditText
      android:id="@+id/editTextTextPasswordRepeat"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:ems="10"
      android:inputType="textPassword"
      android:hint="@string/repeat_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/name"
      app:layout_constraintStart_toStartOf="@+id/editTextName"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPasswordRepeat" />

  <EditText
      android:id="@+id/editTextName"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:ems="10"
      android:inputType="text"
      android:hint="@string/name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/surname"
      app:layout_constraintStart_toStartOf="@+id/editTextSurname"
      app:layout_constraintTop_toBottomOf="@+id/editTextName" />

  <EditText
      android:id="@+id/editTextSurname"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:ems="10"
      android:inputType="text"
      android:hint="@string/surname"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />
</androidx.constraintlayout.widget.ConstraintLayout>