<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditEducation"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_skill_title"
        android:textAlignment="center"
        android:textSize="32sp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_skill"/>
    <EditText
        android:id="@+id/skillDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:scrollbars="vertical"
        android:inputType="textMultiLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_private_information"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/isPrivateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"/>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"/>
    </LinearLayout>
</LinearLayout>